feat: creazione griglia

--- a/index.html
+++ b/index.html
@@ -19,9 +19,29 @@
   <body class="flex">
     <header class="flex">
       <h1>Campo Minato</h1>
+      <button class="btn" type="button">Play</button>
     </header>
 
-    <main>ciao</main>
+    <main class="flex center">
+      <div class="cells-container flex">
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+        <div class="cell"></div>
+      </div>
+    </main>
 
     <footer>
       <span>Made with &hearts; by Boolean</span>
