feat: creazione griglia in js senza funzioni

--- a/index.html
+++ b/index.html
@@ -23,24 +23,7 @@
     </header>
 
     <main class="flex center">
-      <div class="cells-container flex">
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-        <div class="cell"></div>
-      </div>
+      <div class="cells-container flex"></div>
     </main>
 
     <footer>
