--- a/index.html
+++ b/index.html
@@ -18,12 +18,16 @@
   </head>
   <body class="flex">
     <header class="flex">
-      <h1>Campo Minato</h1>
+      <div class="titolo flex center">
+        <img src="img/Logo.png" alt="Logo sito" />
+        <h1>Campo Minato</h1>
+      </div>
       <button class="btn" type="button">Play</button>
     </header>
 
     <main class="flex center">
-      <div class="cells-container flex"></div>
+      <div class="cells-container flex none"></div>
+      <h2 id="message">Press 'Play' to start the game</h2>
     </main>
 
     <footer>
