--- a/index.html
+++ b/index.html
@@ -22,16 +22,22 @@
         <img src="img/Logo.png" alt="Logo sito" />
         <h1>Campo Minato</h1>
       </div>
-      <button class="btn" type="button">Play</button>
+      <div class="buttons">
+        <button id="play" class="btn" type="button">Play</button>
+        <button id="reset" class="btn" type="button">Reset</button>
+      </div>
     </header>
 
     <main class="flex center">
       <div class="cells-container flex none"></div>
-      <h2 id="message">Press 'Play' to start the game</h2>
+      <div class="messages text-center">
+        <h2>Press 'Play' to start the game</h2>
+        <h2>Press 'Reset' to start a new game</h2>
+      </div>
     </main>
 
     <footer>
-      <span>Made with &hearts; by Boolean</span>
+      <span>Made with &hearts; by <a href="index.html">Boolean</a></span>
     </footer>
     <!-- !my js -->
     <script src="js/main.js"></script>
