feat: controllo finale e bozza bonus

--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
         <h1>Campo Minato</h1>
       </div>
       <div class="buttons">
+        <select name="livelli" id="levels">
+          <option value="0">Select Level</option>
+          <option value="1" class="level">Level 1</option>
+          <option value="2" class="level">Level 2</option>
+          <option value="3" class="level">Level 3</option>
+        </select>
         <button id="play" class="btn" type="button">Play</button>
         <button id="reset" class="btn" type="button">Reset</button>
       </div>
